[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/main_launcher.gd" id="1_main"]
[ext_resource type="Theme" path="res://themes/launcher_theme.tres" id="2_theme"]
[ext_resource type="Texture2D" path="res://v0/public/epic-fantasy-game-landscape-with-mountains-and-cas.jpg" id="3_bg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
bg_color = Color(0.15, 0.16, 0.18, 0.85)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="MainLauncher" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_main")

[node name="ContentHBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Sidebar" type="PanelContainer" parent="ContentHBox"]
layout_mode = 2
custom_minimum_size = Vector2(200, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="ContentHBox/Sidebar"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="HomeButton" type="Button" parent="ContentHBox/Sidebar/VBoxContainer"]
layout_mode = 2
text = "Главная"

[node name="NewsButton" type="Button" parent="ContentHBox/Sidebar/VBoxContainer"]
layout_mode = 2
text = "Новости"

[node name="SettingsButton" type="Button" parent="ContentHBox/Sidebar/VBoxContainer"]
layout_mode = 2
text = "Настройки"

[node name="CommunityButton" type="Button" parent="ContentHBox/Sidebar/VBoxContainer"]
layout_mode = 2
text = "Сообщество"

[node name="AchievementsButton" type="Button" parent="ContentHBox/Sidebar/VBoxContainer"]
layout_mode = 2
text = "Достижения"

[node name="ModsButton" type="Button" parent="ContentHBox/Sidebar/VBoxContainer"]
layout_mode = 2
text = "Моды"

[node name="UserProfile" type="HBoxContainer" parent="ContentHBox/Sidebar/VBoxContainer"]
layout_mode = 2

[node name="Avatar" type="TextureRect" parent="ContentHBox/Sidebar/VBoxContainer/UserProfile"]
layout_mode = 2
custom_minimum_size = Vector2(32, 32)
expand_mode = 1
stretch_mode = 4

[node name="UserNameLabel" type="Label" parent="ContentHBox/Sidebar/VBoxContainer/UserProfile"]
layout_mode = 2
text = "Player"

[node name="MainArea" type="VBoxContainer" parent="ContentHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameHeader" type="PanelContainer" parent="ContentHBox/MainArea"]
layout_mode = 2
custom_minimum_size = Vector2(0, 320)
size_flags_horizontal = 3

[node name="BackgroundImage" type="TextureRect" parent="ContentHBox/MainArea/GameHeader"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("3_bg")
expand_mode = 2
stretch_mode = 4
modulate = Color(1, 1, 1, 0.95)

[node name="GradientOverlay" type="ColorRect" parent="ContentHBox/MainArea/GameHeader"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.55)

[node name="OverlayVBox" type="MarginContainer" parent="ContentHBox/MainArea/GameHeader"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="ContentHBox/MainArea/GameHeader/OverlayVBox"]
layout_mode = 2

[node name="TagsHBox" type="HBoxContainer" parent="ContentHBox/MainArea/GameHeader/OverlayVBox/VBoxContainer"]
layout_mode = 2

[node name="OpenSourceTag" type="Label" parent="ContentHBox/MainArea/GameHeader/OverlayVBox/VBoxContainer/TagsHBox"]
layout_mode = 2
text = "Open Source"

[node name="EngineTag" type="Label" parent="ContentHBox/MainArea/GameHeader/OverlayVBox/VBoxContainer/TagsHBox"]
layout_mode = 2
text = "Godot Engine"

[node name="GameTitle" type="Label" parent="ContentHBox/MainArea/GameHeader/OverlayVBox/VBoxContainer"]
layout_mode = 2
text = "Game Title"

[node name="GameDescription" type="Label" parent="ContentHBox/MainArea/GameHeader/OverlayVBox/VBoxContainer"]
layout_mode = 2
text = "Description"
autowrap_mode = 2

[node name="ActionsHBox" type="HBoxContainer" parent="ContentHBox/MainArea/GameHeader/OverlayVBox/VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="ContentHBox/MainArea/GameHeader/OverlayVBox/VBoxContainer/ActionsHBox"]
layout_mode = 2
disabled = true
text = "Играть"

[node name="UpdateButton" type="Button" parent="ContentHBox/MainArea/GameHeader/OverlayVBox/VBoxContainer/ActionsHBox"]
layout_mode = 2
disabled = true
text = "Обновить"

[node name="ProgressBar" type="ProgressBar" parent="ContentHBox/MainArea/GameHeader/OverlayVBox/VBoxContainer/ActionsHBox"]
layout_mode = 2
custom_minimum_size = Vector2(200, 0)

[node name="VersionInfoHBox" type="HBoxContainer" parent="ContentHBox/MainArea/GameHeader/OverlayVBox/VBoxContainer"]
layout_mode = 2

[node name="CurrentVersionLabel" type="Label" parent="ContentHBox/MainArea/GameHeader/OverlayVBox/VBoxContainer/VersionInfoHBox"]
layout_mode = 2
text = "v-"

[node name="LastPlayedLabel" type="Label" parent="ContentHBox/MainArea/GameHeader/OverlayVBox/VBoxContainer/VersionInfoHBox"]
layout_mode = 2
text = "Последняя игра: -"

[node name="StatusLabel" type="Label" parent="ContentHBox/MainArea/GameHeader/OverlayVBox/VBoxContainer"]
layout_mode = 2
text = "Статус"

[node name="NewsPanel" type="ScrollContainer" parent="ContentHBox/MainArea"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_scroll = 0
theme_override_constants/v_scroll = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ContentHBox/MainArea/NewsPanel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ChangelogRichText" type="RichTextLabel" parent="ContentHBox/MainArea/NewsPanel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 140)
bbcode_enabled = true

[node name="NewsGrid" type="GridContainer" parent="ContentHBox/MainArea/NewsPanel/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="NewsCardTemplate" type="Panel" parent="ContentHBox/MainArea/NewsPanel/VBoxContainer/NewsGrid"]
layout_mode = 2
visible = false
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 180)
panel = SubResource("StyleBoxFlat_card")

[node name="VBoxContainer" type="VBoxContainer" parent="ContentHBox/MainArea/NewsPanel/VBoxContainer/NewsGrid/NewsCardTemplate"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="ContentHBox/MainArea/NewsPanel/VBoxContainer/NewsGrid/NewsCardTemplate/VBoxContainer"]
layout_mode = 2
text = "Заголовок"

[node name="ExcerptLabel" type="Label" parent="ContentHBox/MainArea/NewsPanel/VBoxContainer/NewsGrid/NewsCardTemplate/VBoxContainer"]
layout_mode = 2
text = "Краткое описание"
autowrap_mode = 2

[node name="MetaLabel" type="Label" parent="ContentHBox/MainArea/NewsPanel/VBoxContainer/NewsGrid/NewsCardTemplate/VBoxContainer"]
layout_mode = 2
text = "--"

[node name="SettingsPanel" type="Control" parent="ContentHBox/MainArea"]
layout_mode = 2
visible = false

